# bdbv-cpi-mcp

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  start.sh
src/bdbv_cpi_mcp/: auth.py  config.py  server.py
src/bdbv_cpi_mcp/tools/: blast.py  esm.py  mafft.py
