[project]
name = "bdbv-cpi-mcp"
version = "0.1.0"
description = "MCP server for bioinformatics: BLAST, MAFFT, and ESMFold2"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
bdbv-cpi-mcp = "bdbv_cpi_mcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
